test/tests/functions/list_where/non_lambda_argument.txt
error: expected a lambda
 --> tests/functions/list_where/non_lambda_argument.tql:8:13
  |
8 | y = x.where(null)
  |             ^^^^ 
  |
  = usage: where(list:list, predicate:any => bool)
  = docs: https://docs.tenzir.com/reference/functions/where
